# demo-digitalform-api

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
app/: api.py
app/font/THSarabunNew/: THSarabunNew-Bold.pkl  THSarabunNew-Italic.pkl  THSarabunNew.pkl
app/json/: request.json
app/models/: model_document.py
app/routers/: document.py
app/services/: service_document.py
